// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate Commands clientCommands.addWordsToConfigFileFromServer 1`] = `
Object {
  "arguments": Array [
    Array [
      "one",
      "two",
    ],
    "file:///document.ts",
    Object {
      "name": "Workspace Config",
      "uri": "file:///cspell.json",
    },
  ],
  "command": "cSpell.addWordsToConfigFileFromServer",
  "title": "Add to CSpell",
}
`;

exports[`Validate Commands clientCommands.addWordsToDictionaryFileFromServer 1`] = `
Object {
  "arguments": Array [
    Array [
      "one",
      "two",
    ],
    "file:///document.ts",
    Object {
      "name": "Custom Terms",
      "uri": "file:///dictionary.txt",
    },
  ],
  "command": "cSpell.addWordsToDictionaryFileFromServer",
  "title": "Add to dictionary",
}
`;

exports[`Validate Commands clientCommands.addWordsToVSCodeSettingsFromServer 1`] = `
Object {
  "arguments": Array [
    Array [
      "one",
      "two",
    ],
    "file:///document.ts",
    "workspace",
  ],
  "command": "cSpell.addWordsToVSCodeSettingsFromServer",
  "title": "Add to VS Code",
}
`;
